# readme-score

./: README.md  pyproject.toml
readme_score/: __init__.py  cli.py  display.py  fetcher.py  scorer.py
tests/: test_fetcher.py  test_scorer.py
